# Voz

./: .gitignore  CMakeLists.txt  gitignore.gitignore
voz/: CMakeLists.txt  voz.cpp
voz/features/: mfcc.cpp  mfcc.h
voz/load_audio/: audio_io.cpp  audio_io.h  libs.cpp
voz/preprocessing/: denoise.cpp  denoise.h  normalize.cpp  normalize.h  vad.cpp  vad.h
voz/segmentation/: stft.cpp  stft.h
